# Roman-KAta

./: CMakeLists.txt  README  README.md
src/: AddSubRomanNum.c  AddSubRomanNum.h  CMakeLists.txt  Makefile.am  main.c
tests/: CMakeLists.txt  Makefile.am  check_AddSubRoman.c
