## Process this file with automake to produce Makefile.in

TESTS = check_AddSubRomanNum
check_PROGRAMS = check_AddSubRomanNum
check_AddSubRomanNum_SOURCES = check_AddSubRomanNum.c $(top_builddir)/src/AddSubRomanNum.h
check_AddSubRomanNum_CFLAGS = @CHECK_CFLAGS@
check_AddSubRomanNum_LDADD = $(top_builddir)/src/libAddSubRomanNum.la @CHECK_LIBS@
